# nonebot-plugin-riffusion

./: README.md  pyproject.toml
nonebot_plugin_example/: __init__.py
nonebot_plugin_riffusion/: __init__.py  __main__.py  config.py  data_source.py
