[project]
name = "nonebot-plugin-riffusion"
dynamic = ["version"]
description = "Let AI riff a song for you."
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.3.1",
    "nonebot-plugin-alconna>=0.48.0",
    "httpx>=0.27.0",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-riffusion"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_riffusion/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
